kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-team-api-postgres
  namespace: analytics
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: data-team-api-postgres
