kubernetes/prisma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-api-prisma
  namespace: analytics
spec:
  ports:
  - port: 4466
    targetPort: 4466
    protocol: TCP
  selector:
    app: collab-api-prisma
