kubernetes/yoga-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-api
  namespace: analytics
spec:
  ports:
    - protocol: TCP
      port: 4000
  selector:
    app: collab-api
